@@ -666,6 +666,9 @@
                         <property name="label" translatable="yes">_Install...</property>
                         <property name="use_underline">True</property>
                       </widget>
+                      <packing>
+                        <property name="position">3</property>
+                      </packing>
                     </child>
                     <child>
                       <widget class="GtkButton" id="theme_delete">
@@ -677,7 +680,7 @@
                         <property name="sensitive">False</property>
                       </widget>
                       <packing>
-                        <property name="position">1</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
@@ -689,7 +692,7 @@
                         <property name="sensitive">False</property>
                       </widget>
                       <packing>
-                        <property name="position">2</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                     <child>
@@ -701,7 +704,7 @@
                         <property name="use_underline">True</property>
                       </widget>
                       <packing>
-                        <property name="position">3</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </widget>
