@@ -1,3 +1,8 @@
+2007-07-08  Denis Washington  <denisw@svn.gnome.org>
+
+	* appearance.glade: change the button order in themes tab.
+	* appearance-style.c: add an icon to Customize button.
+
 2007-07-08  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-desktop.c: (wp_view_tooltip_cb): fix leaks
